feat: adicionando mapa e modais para música e portão

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -12,7 +12,12 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body class="d-flex justify-content-center  align-items-center">
+<body>
+    <header class="d-flex justify-content-center mb-4 p-1" style="background-color: black">
+        <a href="../maps/index.html" style="color: white !important;">
+            Sextou!! Venha curtir no Pretto com o melhor trajeto!! Se beber, não dirija!!
+        </a>
+    </header>
     <main class="container-card flex-direction-column d-flex align-items-center">
         <div class="mb-50 d-flex justify-content-between" style="width: 500px;">
             <div class="cursor-pointer flex-direction-column d-flex justify-content-center align-items-center">
