--- a/pages/house/index.html
+++ b/pages/house/index.html
@@ -63,13 +63,18 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title"></h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar"
+                            onclick="fecharModal()">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
                     <div class="modal-body">
                         <input class="d-flex justify-content-center modal-input" type="text">
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-success btn-modal" onclick="fecharModal()">Salvar</button>
-                        <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="fecharModal()">Fechar</button>
+                        <button type="button" class="btn btn-success btn-modal" onclick="fecharModal()"></button>
+                        <button type="button" class="btn btn-primary btn-speak" data-dismiss="modal"
+                            onclick="fecharModal()"></button>
                     </div>
                 </div>
             </div>
